feat: timeline fine tuning, added en formation

--- a/src/content/pages/de/past/formation.mdx
+++ b/src/content/pages/de/past/formation.mdx
@@ -21,3 +21,12 @@ import Divider from "../../../../components/Divider.astro";
   aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
 </FormationSection>
+
+<Divider firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
+
+<FormationSection class="dark-background" key="evolution" last>
+  <h2 name="title">Entwicklung</h2>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+</FormationSection>
