--- a/src/content/pages/en/past/formation.mdx
+++ b/src/content/pages/en/past/formation.mdx
@@ -2,3 +2,32 @@
 path: formation
 title: Formation
 ---
+
+
+import FormationSection from "../../../../layouts/sections/FormationSection.astro";
+import Divider from "../../../../components/Divider.astro";
+
+<FormationSection class="spotlight" key="founding">
+  <h2 name="title">Founding</h2>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+</FormationSection>
+
+<Divider firstSegmentColor="var(--color-white)" fixAntialiasingBottom />
+
+<FormationSection class="white-background" key="office">
+  <h2 name="title">First Office</h2>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+</FormationSection>
+
+<Divider firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
+
+<FormationSection class="dark-background" key="evolution" last>
+  <h2 name="title">Evolution</h2>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+</FormationSection>
