feat: add dot at beginning of spine. Add TimelineEntry.

--- a/src/content/pages/de/past/formation.mdx
+++ b/src/content/pages/de/past/formation.mdx
@@ -7,7 +7,7 @@ import FormationSection from "../../../../layouts/sections/FormationSection.astr
 import Divider from "../../../../components/Divider.astro";
 
 <FormationSection class="spotlight" key="founding">
-  <h2 name="title">Gründung</h2>
+  <h2>Gründung</h2>
 
   Obwohl die Idee und der Name schon einige Zeit zuvor existierten, wurde die Firma offiziell im Januar 2020 von Robin gegründet. Bald nach der Gründung ist Diego als zweiten Mitgründer dazugestossen. Fortan arbeiteten die beiden daran, die ersten Softwareprojekte umzusetzen.
 
@@ -16,7 +16,7 @@ import Divider from "../../../../components/Divider.astro";
 <Divider firstSegmentColor="var(--color-white)" fixAntialiasingBottom />
 
 <FormationSection class="white-background" key="office">
-  <h2 name="title">Büro und Mitarbeiter</h2>
+  <h2>Büro und Mitarbeiter</h2>
 
   Zuerst dachten wir, dass wir einfach von zu Hause aus arbeiten. Doch als wir davon erfuhren, dass in Oerlikon das ehemalige Swissôtel in eine WG für Studenten und Startups umgewandelt wird, haben wir uns sofort beworben und Glück gehabt. Die Geschichte kann [hier](https://www.srf.ch/news/schweiz/mit-rund-300-mitbewohnern-dieser-ehemalige-hotelturm-wird-zur-mega-wg) nachgelesen werden. Somit hatten wir von Februar 2021 bis Ende Jahr unser erstes Büro mitten in Oerlikon.
 
@@ -29,7 +29,7 @@ import Divider from "../../../../components/Divider.astro";
 <Divider firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
 
 <FormationSection class="dark-background" key="evolution" last>
-  <h2 name="title">Entwicklung</h2>
+  <h2>Entwicklung</h2>
 
   Seither haben wir uns stetig weiterentwickelt und neue Projekte realisiert, die unsere Vision und Mission unterstützen. Wir freuen uns auf die kommenden Herausforderungen und Chancen, die vor uns liegen.
 
