--- a/src/content/pages/en/past/formation.mdx
+++ b/src/content/pages/en/past/formation.mdx
@@ -3,12 +3,11 @@ path: formation
 title: Formation
 ---
 
-
 import FormationSection from "../../../../layouts/sections/FormationSection.astro";
 import Divider from "../../../../components/Divider.astro";
 
 <FormationSection class="spotlight" key="founding">
-  <h2 name="title">Founding</h2>
+  <h2>Founding</h2>
 
   Although the idea and name had existed for some time before, the company was officially founded by Robin in January 2020. Shortly after the founding, Diego joined as the second co-founder. From then on, the two worked together to implement the first software projects.
 
@@ -17,7 +16,7 @@ import Divider from "../../../../components/Divider.astro";
 <Divider firstSegmentColor="var(--color-white)" fixAntialiasingBottom />
 
 <FormationSection class="white-background" key="office">
-  <h2 name="title">Office and employees</h2>
+  <h2>Office and employees</h2>
 
   At first, we thought we would simply work from home. But when we learned that the former Swissôtel in Oerlikon was being converted into shared accommodation for students and startups, we applied immediately and were lucky. The story can be read [here](https://www.srf.ch/news/schweiz/mit-rund-300-mitbewohnern-dieser-ehemalige-hotelturm-wird-zur-mega-wg). Thus, we had our first office in the heart of Oerlikon from February 2021 until the end of the year.
 
@@ -30,7 +29,7 @@ import Divider from "../../../../components/Divider.astro";
 <Divider firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
 
 <FormationSection class="dark-background" key="evolution" last>
-  <h2 name="title">Evolution</h2>
+  <h2>Evolution</h2>
 
   Since then, we have continuously evolved and realized new projects that support our vision and mission. We look forward to the upcoming challenges and opportunities that lie ahead.
 
