chore: remove last key

--- a/src/content/pages/de/past/formation.mdx
+++ b/src/content/pages/de/past/formation.mdx
@@ -28,7 +28,7 @@ import Divider from "../../../../components/Divider.astro";
 
 <Divider firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
 
-<FormationSection class="dark-background" key="evolution" last>
+<FormationSection class="dark-background" key="evolution">
   <h2>Entwicklung</h2>
 
   Seither haben wir uns stetig weiterentwickelt und neue Projekte realisiert, die unsere Vision und Mission unterstützen. Wir freuen uns auf die kommenden Herausforderungen und Chancen, die vor uns liegen.
