--- a/src/content/pages/en/past/formation.mdx
+++ b/src/content/pages/en/past/formation.mdx
@@ -28,7 +28,7 @@ import Divider from "../../../../components/Divider.astro";
 
 <Divider firstSegmentColor="var(--color-white)" flipVertical fixAntialiasingTop />
 
-<FormationSection class="dark-background" key="evolution" last>
+<FormationSection class="dark-background" key="evolution">
   <h2>Evolution</h2>
 
   Since then, we have continuously evolved and realized new projects that support our vision and mission. We look forward to the upcoming challenges and opportunities that lie ahead.
