chore: add content

--- a/src/content/pages/de/past/formation.mdx
+++ b/src/content/pages/de/past/formation.mdx
@@ -22,7 +22,7 @@ import Divider from "../../../../components/Divider.astro";
 
   Dabei haben wir festgestellt, dass es uns sehr hilft, wenn wir uns regelmässig persönlich austauschen können. Deshalb haben wir uns entschieden, auch nach der Zwischennutzung des Swissôtels ein Büro zu mieten. Schnell haben wir ein passendes Büro in Glattbrugg gefunden, welches wir seit Anfang 2022 nutzen.
 
-  In der Zwischenzeit sind auch weitere Mitarbeiter zu uns gestossen, welche uns bei der Umsetzung unserer Projekte unterstützen.
+  In der Zwischenzeit sind auch weitere Mitarbeiter zu uns gestossen, die uns bei der Umsetzung der Projekte unterstützen.
 
 </FormationSection>
 
